<resources>
    <string name="app_name">SantanderDevWeek</string>
    <string name="saldo_disponivel">Saldo disponível</string>
    <string name="saldo_limite">Saldo - Limite</string>
    <string name="txt_ver_extrato">Ver extrato</string>
    <string name="txt_pagamento">Pagar</string>
    <string name="txt_transferencia">Transferir</string>
    <string name="txt_recarga">Recarga</string>
    <string name="txt_cartao_final">Cartão final</string>
</resources>